--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -3,6 +3,22 @@ server {
     server_name 127.0.0.1, localhost 51.250.18.73;
     server_tokens off;
 
+    location /backend_static/admin/ {
+      root /var/html/;
+    }
+
+    location /media/ {
+      root /var/html/;
+    }
+
+    location /backend_static/ {
+        root /var/html/;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+    }
+
     location /backend_media/admin/ {
         root /var/html/;
     }
